--- a/index.liquid
+++ b/index.liquid
@@ -1,7 +1,12 @@
 ---
 layout: layout.liquid
-title: 11ty Boilerplate
+title: Random Name Selector
 ---
 
-<h1>Yet Another 11ty <strong>Boilerplate</strong></h1>
-<img alt="pine" src="/images/pine.png" width="50" />
+<div x-data="{
+        name: '',
+        namesList: ['Ulas', 'Boran', 'Katara', 'Sulo', 'Mick', 'Sabreena', 'Fred', 'Lana', 'Leo', 'Thomas']
+    }">
+    <button @click="name = nameSelector(namesList)">Name Selector</button>
+    <h1 x-text="name"></h1>
+</div>
