--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -1,5 +1,5 @@
 ---
-title: 11ty Boilerplate
+title: Random Name Selector
 ---
 
 <!DOCTYPE html>
@@ -9,14 +9,10 @@ title: 11ty Boilerplate
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ title }}</title>
   <link rel="stylesheet" href="/styles/screen.css">
+  <script src="//unpkg.com/alpinejs" defer></script>
+  <script src="/styles/utilities.js" defer></script>
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="/" title="Go home">Home</a></li>
-      <li><a href="/about/" title="About the boilerplate">About</a></li>
-    </ul>
-  </nav>
     {{ content }}
 </body>
 </html>
