--- a/styles/screen.css
+++ b/styles/screen.css
@@ -1,50 +1,42 @@
+:root{
+    --main-bg-color: #a67db8;
+    --button-text-color: #ecfee8;
+    --button-color: #00a6a6;
+    --main-text-color: #30323d;
+    --button-hover-color: #eeb902;
+}
+
 body {
-    font-family: Helvetica, sans-serif;
-    color: #EAE8FF;
-    background: #2D3142;
-    padding: 0 40px;
-    text-align: center;
+    background-color: var(--main-bg-color);
+    font-family: 'Arial', sans-serif;
 }
 
-nav {
-    margin: 40px auto 0 auto;
-    width: 250px;
-    border-radius: 50px;
-    background: #212431;
-}
-
-nav ul {
+div {
     display: flex;
-    justify-content: space-evenly;
-    margin: 0;
-    padding: 0;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
-nav ul li {
-    list-style-type: none;
-    margin: 0;
+button {
+    background-color: var(--button-color);
+    border-radius: 2rem;
+    border: none;
+    cursor: pointer;
+    font-size: 6em;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding: 50px;
+    color: var(--button-text-color);
+    margin-top: 150px;
 }
 
-nav ul li a {
-    display: inline-block;
-    padding: 20px;
-    color: #EAE8FF;
-    text-decoration: none;
-    font-size: 1.2em;
+button:hover {
+    background-color: var(--button-hover-color)
 }
 
 h1 {
-    font-size: 8em;
-    letter-spacing: -2px;
-}
-
-h1 strong {
-    background: rgb(34,193,195);
-    background: linear-gradient(45deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-img.about {
-    opacity: 0.5;
+    color: var(--main-text-color);
+    font-size: 6em;
+    margin-top: 25px;
 }
